fixed narrow viewport gradient being too dark on IE11 on meet the team page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1880,7 +1880,7 @@ label[for="burger"] {
     }
 
     .meet-the-team-container-narrow .meet-the-team-body {
-        background-image: linear-gradient(0deg, rgb(208 236 253) 0%, rgb(208 236 253) 86%, rgb(255, 255, 255) 100%);
+        background-image: linear-gradient(0deg, rgba(208, 236, 253, 1) 0%, rgba(208, 236, 253, 1) 86%, rgba(255, 255, 255, 1) 100%);
         margin-top: 20px;
     }
 
